[package]
name = "tpuf-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
creusot-std = "0.12.0-dev"

[patch.crates-io]
creusot-std = { path = "/Users/andyt/Stuff/creusot-trial/creusot/creusot-std" }
